fixed: post modify 변경